# stocks-analyzer

./: .firebaserc  .gitignore  README.md  cloudbuild.yaml  firebase.json
.github/workflows/: daily-screen.yml  weekly-fundamentals.yml
screener/: .env.example  pyproject.toml
screener/src/screener/: alerts.py  config.py  confluence.py  db.py  fetch.py  fundamentals.py  indicators.py  quality.py  regime.py  rs.py  sell_rules.py  sizing.py  strategies.py  trend_template.py  universe.py  vcp.py
screener/src/screener/jobs/: run_daily.py  run_weekly.py
screener/tests/: conftest.py  test_fundamentals.py  test_rs.py  test_sell_rules.py  test_strategies.py  test_trend_template.py  test_vcp.py
scripts/: setup-gcp.sh
supabase/: config.toml
supabase/migrations/: 0001_init.sql  0002_strategies.sql
web/: apphosting.yaml  package-lock.json  package.json
web/src/: proxy.ts
web/src/app/: actions.ts  globals.css  layout.tsx  page.tsx  run-now.tsx  theme-toggle.tsx
web/src/app/login/: page.tsx
web/src/app/positions/: page.tsx
web/src/app/screener/: page.tsx  screener-table.tsx
web/src/app/signals/: page.tsx
web/src/components/: badge.tsx  empty-state.tsx  section-card.tsx  ticker-link.tsx
web/src/lib/: auth.ts  format.ts  labels.ts  queries.ts  supabase.ts
