[project]
name = "screener"
version = "0.1.0"
description = "Minervini x Buffett/Munger stock screener and alert engine"
requires-python = ">=3.12,<3.13"
dependencies = [
    "yfinance==0.2.66",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "pyarrow>=16",
    "httpx>=0.27",
    "tenacity>=8.3",
    "supabase>=2.15",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screener"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
